tests/ui/auto-traits/issue-23080.stderr
error[E0380]: auto traits cannot have associated items
  --> $DIR/issue-23080.rs:6:8
   |
LL |   unsafe trait Trait {
   |                ----- auto traits cannot have associated items
LL |       fn method(&self) {
   |  _____-  ^^^^^^
LL | |         println!("Hello");
LL | |     }
   | |_____- help: remove these associated items

error: aborting due to previous error

For more information about this error, try `rustc --explain E0380`.
